--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,9 @@
 *::before, *::after {
     box-sizing: border-box;
 }
+.login:hover{
+    background-color: #41A6DF;
+}
 
 .container {
     display: flex;
