links redirect login

--- a/views/webpay_plus/template.pug
+++ b/views/webpay_plus/template.pug
@@ -7,4 +7,4 @@ block content
   block actions
   .row(style="margin-top: 80px")
     .col.m4
-      a.btn.waves-effect.waves-dark.white.black-text(href="/") Volver al inicio
+      a.btn.waves-effect.waves-dark.white.black-text(href="/api/error.html") Volver al inicio..
